@startuml
skinparam classAttributeIconSize 0
skinparam style strictuml
hide empty members

title Diagrama de Classes Conceitual - Plataforma de Monitoria

' Foco em clareza do domínio, menos detalhes técnicos do Django

class Usuario <<entidade>> {
  +id
  +nome
  +email
}

class Aluno <<papel>> {
  +matricula
  +curso
}

class Professor <<papel>> {
  +departamento
}

class Coordenador <<papel>> {
  +departamento
}

class Curso <<entidade>> {
  +codigo
  +nome
  +descricao
}

class Disciplina <<entidade>> {
  +codigo
  +nome
  +periodo
}

class VagaMonitoria <<entidade>> {
  +tipo
  +descricao
  +cr_minimo
  +horas
  +remuneracao
  +status
}

class Candidatura <<entidade>> {
  +status
  +criado_em
}

class HistoricoAlunoDisciplina <<associação>> {
  +cr
}

' Herança conceitual de papéis
Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- Coordenador

' Relacionamentos principais
Curso "1" -- "*" Disciplina : oferece >
Professor "1" -- "*" Disciplina : ministra >
Coordenador "*" -- "*" Curso : coordena >

Aluno "1" -- "*" Candidatura : submete >
VagaMonitoria "1" -- "*" Candidatura : recebe <

Disciplina "1" -- "*" VagaMonitoria : abre >
Professor "1" -- "*" VagaMonitoria : responsável >

Aluno "1" -- "*" HistoricoAlunoDisciplina
Disciplina "1" -- "*" HistoricoAlunoDisciplina

note right of Disciplina
Mesmo nome pode existir para professores
ou cursos diferentes.
end note

note bottom of HistoricoAlunoDisciplina
Um aluno possui no máximo um histórico
por disciplina.
end note

@enduml